--- a/index.html
+++ b/index.html
@@ -192,7 +192,16 @@ const seconds = timeNodes
     const [mins, secs] = timeCode.split(':').map(parseFloat);
     return (mins * 60) + secs;
     console.log(mins, secs);
-  });
+  })
+  .reduce((total, vidSeconds) => total + vidSeconds)
+
+  let secondsLeft = seconds;
+  const hours = Math.floor(secondsLeft / 3600);
+  secondsLeft = secondsLeft % 3600;
+
+  const mins = Math.floor(secondsLeft / 60);
+  secondsLeft = secondsLeft % 60;
+
 
 </script>
 
